# routes/profileRoutes.js
@@ -5,12 +5,21 @@ const upload = require('../middlewares/upload')
 const {
 	getProfile,
 	updateProfile,
+	updateProfileImage,
 } = require('../controllers/profileController')
 
 // Get user profile
 router.get('/profile', auth, getProfile)
 
 // Update user profile
-router.put('/profile', auth, upload.single('profileImage'), updateProfile)
+router.put('/profile', auth, updateProfile)
+
+// Update user profile image
+router.put(
+	'/profile/image',
+	auth,
+	upload.single('profileImage'),
+	updateProfileImage
+)
 
 module.exports = router
